[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "datadoctor"
version = "0.1.0"
description = "A Python package for cleaning CSV files and detecting data leakage in machine learning workflows"
authors = [{ name = "Ansh Malik", email = "anshmalik845@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "click>=8.1.3",
    "pandas>=1.5.3",
    "scikit-learn>=1.2.2",
    "numpy>=1.24.3",
    "matplotlib>=3.7.1",
    "seaborn>=0.12.2"
]

[project.scripts]
datadoctor = "datadoctor.cli:cli"
